# lean-ftl

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Pipfile  README.md  build-all-targets  build-doc  build-release  build_release  buildit  doc-live-preview  linux.cmake  package.json  run_act  testit
.github/workflows/: on-release.yml  push.yml
cmake/: gcc-arm-none-eabi.cmake  gcc-riscv-none-elf.cmake  generic_binary.cmake  git_version.cmake
doc/: doxy_frontpage.md
doc/source/: acknowledgement.rst  api.rst  conf.py  development.rst  getting_started.rst  index.rst  internal.rst  introduction.rst  tests.rst  using.rst
examples/hello/: main.c
examples/include/: error.h  ui.h
examples/single_area/: main.c  type.h
liblean-ftl/: CMakeLists.txt
liblean-ftl-test/: CMakeLists.txt
liblean-ftl-test/include/: error.h  lean-ftl-test.h  nvm_state.h  type.h  util.h
liblean-ftl-test/source/: test.c
liblean-ftl/include/: lean-ftl.h
liblean-ftl/source/: ftl.c
on/: ch32v307  ch32v307-none-embed  ch32v307-wch-elf  cortex-m0  cortex-m23  cortex-m3  cortex-m33  cortex-m35p  cortex-m52  cortex-m55  cortex-m7  cortex-m85  linux  nucleo-u5a5zj-q  rv32imc  stm32l5  stm32u5
test/include/: type.h
test/source/: main.c
